--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -28,7 +28,7 @@ spring:
         type: com.zaxxer.hikari.HikariDataSource
         url: jdbc:mysql://localhost:3306/rockbible3?useUnicode=true&characterEncoding=utf8&useSSL=false
         username: root
-        password:
+        password: d4v1d001
         hikari:
             data-source-properties:
                 cachePrepStmts: true
@@ -76,7 +76,7 @@ liquibase:
 #        keyAlias: rockbible3
 # ===================================================================
 server:
-    port: 8080
+    port: 8081
 
 # ===================================================================
 # JHipster specific properties
@@ -108,7 +108,7 @@ jhipster:
                 token-validity-in-seconds-for-remember-me: 2592000
     mail: # specific JHipster mail property, for standard properties see MailProperties
         from: rockbible3@localhost
-        base-url: http://127.0.0.1:8080
+        base-url: http://127.0.0.1:8081
     metrics: # DropWizard Metrics configuration, used by MetricsConfiguration
         jmx.enabled: true
         graphite: # Use the "graphite" Maven profile to have the Graphite dependencies
