--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
 
 
     <dependencies>
+              <dependency>
+                    <groupId>org.projectlombok</groupId>
+                    <artifactId>lombok</artifactId>
+                    <optional>true</optional>
+                </dependency>
         <dependency>
             <groupId>io.github.jhipster</groupId>
             <artifactId>jhipster</artifactId>
