--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "4.0.0-beta",
     "core-js": "2.4.1",
     "font-awesome": "4.7.0",
+    "generator-jhipster-pages": "^2.0.2",
     "jquery": "3.2.1",
     "ng-jhipster": "0.2.12",
     "ng2-webstorage": "1.8.0",
@@ -32,7 +33,7 @@
     "zone.js": "0.8.16"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.2",
+    "@angular/cli": "^1.6.7",
     "@angular/compiler-cli": "4.3.2",
     "@types/jasmine": "2.5.53",
     "@types/node": "8.0.18",
