--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -21,9 +21,9 @@ spring:
             enabled: false
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:mysql://localhost:3306/rockbible3?useUnicode=true&characterEncoding=utf8&useSSL=false
+        url: jdbc:mysql://localhost:8889/rockbible3?useUnicode=true&characterEncoding=utf8&useSSL=false
         username: root
-        password: d4v1d001
+        password: root
         hikari:
             data-source-properties:
                 cachePrepStmts: true
