Añadido la sidebar, configurado fondos de sesiones - (by Julio & Llauna)

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -41,7 +41,7 @@
   "generator-jhipster-pages": {
     "promptValues": {
       "pageSet": "_CreateNew_",
-      "pageType": "loadAndSaveToServer"
+      "pageType": "table"
     }
   }
 }
