--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,5 @@ Desktop.ini
 # ESLint
 ######################
 .eslintcache
+/src/main/resources/config/application-dev.yml
+/src/main/resources/config/application-prod.yml
