--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "bootstrap": "4.0.0-beta",
     "core-js": "2.4.1",
     "font-awesome": "4.7.0",
-    "generator-jhipster-pages": "^2.0.2",
+    "generator-jhipster-pages": "^2.0.4",
     "jquery": "3.2.1",
     "ng-jhipster": "0.2.12",
     "ng2-webstorage": "1.8.0",
     "ngx-cookie": "1.0.0",
     "ngx-infinite-scroll": "0.5.1",
     "reflect-metadata": "0.1.10",
-    "rxjs": "5.4.2",
+    "rxjs": "^5.5.10",
     "swagger-ui": "2.2.10",
     "tether": "1.4.0",
     "zone.js": "0.8.16"
