--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ng2-webstorage": "1.8.0",
     "ngx-cookie": "1.0.0",
     "ngx-infinite-scroll": "0.5.1",
+    "popper.js": "^1.14.3",
     "reflect-metadata": "0.1.10",
     "rxjs": "^5.5.10",
     "swagger-ui": "2.2.10",
