--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -26,7 +26,7 @@ spring:
         serialization.indent_output: true
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:mysql://localhost:3306/rockbible3?useUnicode=true&characterEncoding=utf8&useSSL=false
+        url: jdbc:mysql://aa15uaq46mqdm5u.czmhay1pnwmo.eu-west-1.rds.amazonaws.com:3306/rockbible3?useUnicode=true&characterEncoding=utf8&useSSL=false
         username: root
         password: d4v1d001
         hikari:
