--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -21,7 +21,7 @@ spring:
             enabled: false
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:mysql://localhost:3306/rockbible3?useUnicode=true&characterEncoding=utf8&useSSL=false
+        url: jdbc:mysql://aa15uaq46mqdm5u.czmhay1pnwmo.eu-west-1.rds.amazonaws.com:3306/rockbible3?useUnicode=true&characterEncoding=utf8&useSSL=false
         username: root
         password: d4v1d001
         hikari:
@@ -69,7 +69,7 @@ liquibase:
 #        keyAlias: rockbible3
 # ===================================================================
 server:
-    port: 8081
+    port: 8080
     compression:
         enabled: true
         mime-types: text/html,text/xml,text/plain,text/css, application/javascript, application/json
